--- a/styles/style.css
+++ b/styles/style.css
@@ -71,7 +71,7 @@ h4{
     color: #000;
 }
 .join{
-    background-color: #64a7c2;
+    background-color: #38687a;
     color: #000;
 }
 .book:hover {
@@ -110,7 +110,7 @@ footer a:hover{
 }
 nav a{
     text-align: center;
-    color: #757dc5;
+    color: #538da3;
     text-decoration: none;
 }
 .book{
@@ -134,3 +134,95 @@ footer p {
 footer p a:hover {
     text-decoration: underline;
 }  
+.home-title {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 2em;
+}
+.book, .join{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 18px;
+}
+.msg p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 0.8em;
+}
+.msg{
+    background-color: #64a7c2;
+    line-height: 1.5em;
+}
+#logo_link{
+    text-decoration: none;
+    color: #4b0404;
+    text-align: center;
+    padding: 5px;
+    padding-top: 5px;
+}
+nav a {
+    text-decoration: none;
+    color: #fcfbfb;
+    text-align: center;
+    padding: 0.35px;
+}
+.book{
+    text-decoration: none;
+    color: #080808;
+    text-align: center;
+    padding: 0.15px 
+}
+.join{
+    text-decoration: none;
+    color: #000;
+    text-align: center;
+    padding: 0.30px;
+}
+.icon{
+    text-decoration: none;
+    color: #000;
+    text-align: center;
+    padding-top: 10px;
+}
+.msg{
+    text-decoration: none;
+    color: #000;
+    text-align: center;
+    padding: 35px;
+}
+.msg p{
+    text-decoration: none;
+    color: #000;
+    text-align: center;
+    padding-bottom: 15px;
+}
+footer{
+    text-decoration: none;
+    color: #000;
+    text-align: center;
+    padding: 25px 50px;  
+}
+footer .social img{
+    text-decoration: none;
+    color: #000;
+    text-align: center;
+    padding-top: 15px;
+}
+.home-title {
+    margin-top: 10px;
+}
+.book, .join{
+    margin-top: 50px;
+}
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+footer{
+    margin-top: 200px;
+}
+.book, .join{
+    border-radius: 5px;
+}
+.card-img {
+    border: 10px solid #d9c2a3;
+}
+main section img {
+    box-sizing: border-box;
+}
