--- a/styles/site-plan-rafting.css
+++ b/styles/site-plan-rafting.css
@@ -58,6 +58,8 @@ header {
   text-align: center;
   color: var(--headline-color-on-color);
   background-color: var(--paragraph-background-color);
+  display: grid;
+  grid-template-columns: 150px auto;
 }
 header > h1, header > h2 {
   color: var(--headline-color-on-color);
@@ -105,6 +107,7 @@ nav {
 nav  {
   list-style-type: none;
   display: flex;
+  justify-content: space-around;
 }
 nav a {
   padding:1em;
